qt6/gen_qlocale.nim

proc fcQLocale_toInt2(self: pointer, s: struct_miqt_string, ok: ptr bool): cint {.importc: "QLocale_toInt2".}
proc fcQLocale_toUInt2(self: pointer, s: struct_miqt_string, ok: ptr bool): cuint {.importc: "QLocale_toUInt2".}
proc fcQLocale_toLong2(self: pointer, s: struct_miqt_string, ok: ptr bool): clong {.importc: "QLocale_toLong2".}
proc fcQLocale_toULong2(self: pointer, s: struct_miqt_string, ok: ptr bool): culong {.importc: "QLocale_toULong2".}
proc fcQLocale_toLongLong2(self: pointer, s: struct_miqt_string, ok: ptr bool): clonglong {.importc: "QLocale_toLongLong2".}
proc fcQLocale_toULongLong2(self: pointer, s: struct_miqt_string, ok: ptr bool): culonglong {.importc: "QLocale_toULongLong2".}
proc fcQLocale_toFloat2(self: pointer, s: struct_miqt_string, ok: ptr bool): float32 {.importc: "QLocale_toFloat2".}
proc fcQLocale_toDouble2(self: pointer, s: struct_miqt_string, ok: ptr bool): float64 {.importc: "QLocale_toDouble2".}
proc fcQLocale_toString22(self: pointer, f: float64, format: cchar): struct_miqt_string {.importc: "QLocale_toString22".}
proc fcQLocale_toString32(self: pointer, f: float64, format: cchar, precision: cint): struct_miqt_string {.importc: "QLocale_toString32".}
proc fcQLocale_toString23(self: pointer, f: float32, format: cchar): struct_miqt_string {.importc: "QLocale_toString23".}
proc fcQLocale_toString33(self: pointer, f: float32, format: cchar, precision: cint): struct_miqt_string {.importc: "QLocale_toString33".}
proc fcQLocale_toString24(self: pointer, date: pointer, format: cint): struct_miqt_string {.importc: "QLocale_toString24".}
proc fcQLocale_toString25(self: pointer, time: pointer, format: cint): struct_miqt_string {.importc: "QLocale_toString25".}
proc fcQLocale_toString26(self: pointer, dateTime: pointer, format: cint): struct_miqt_string {.importc: "QLocale_toString26".}
proc fcQLocale_dateFormat1(self: pointer, format: cint): struct_miqt_string {.importc: "QLocale_dateFormat1".}
proc fcQLocale_timeFormat1(self: pointer, format: cint): struct_miqt_string {.importc: "QLocale_timeFormat1".}
proc fcQLocale_dateTimeFormat1(self: pointer, format: cint): struct_miqt_string {.importc: "QLocale_dateTimeFormat1".}
proc fcQLocale_toDate22(self: pointer, string: struct_miqt_string, param2: cint): pointer {.importc: "QLocale_toDate22".}
proc fcQLocale_toTime22(self: pointer, string: struct_miqt_string, param2: cint): pointer {.importc: "QLocale_toTime22".}
proc fcQLocale_toDateTime22(self: pointer, string: struct_miqt_string, format: cint): pointer {.importc: "QLocale_toDateTime22".}
proc fcQLocale_monthName2(self: pointer, param1: cint, format: cint): struct_miqt_string {.importc: "QLocale_monthName2".}
proc fcQLocale_standaloneMonthName2(self: pointer, param1: cint, format: cint): struct_miqt_string {.importc: "QLocale_standaloneMonthName2".}
proc fcQLocale_dayName2(self: pointer, param1: cint, format: cint): struct_miqt_string {.importc: "QLocale_dayName2".}
proc fcQLocale_standaloneDayName2(self: pointer, param1: cint, format: cint): struct_miqt_string {.importc: "QLocale_standaloneDayName2".}
proc fcQLocale_currencySymbol1(self: pointer, param1: cint): struct_miqt_string {.importc: "QLocale_currencySymbol1".}
proc fcQLocale_toCurrencyString2(self: pointer, param1: clonglong, symbol: struct_miqt_string): struct_miqt_string {.importc: "QLocale_toCurrencyString2".}
proc fcQLocale_toCurrencyString22(self: pointer, param1: culonglong, symbol: struct_miqt_string): struct_miqt_string {.importc: "QLocale_toCurrencyString22".}
proc fcQLocale_toCurrencyString23(self: pointer, i: cshort, symbol: struct_miqt_string): struct_miqt_string {.importc: "QLocale_toCurrencyString23".}
proc fcQLocale_toCurrencyString24(self: pointer, i: cushort, symbol: struct_miqt_string): struct_miqt_string {.importc: "QLocale_toCurrencyString24".}
proc fcQLocale_toCurrencyString25(self: pointer, i: cint, symbol: struct_miqt_string): struct_miqt_string {.importc: "QLocale_toCurrencyString25".}
proc fcQLocale_toCurrencyString26(self: pointer, i: cuint, symbol: struct_miqt_string): struct_miqt_string {.importc: "QLocale_toCurrencyString26".}
proc fcQLocale_toCurrencyString27(self: pointer, param1: float64, symbol: struct_miqt_string): struct_miqt_string {.importc: "QLocale_toCurrencyString27".}
proc fcQLocale_toCurrencyString3(self: pointer, param1: float64, symbol: struct_miqt_string, precision: cint): struct_miqt_string {.importc: "QLocale_toCurrencyString3".}
proc fcQLocale_toCurrencyString28(self: pointer, i: float32, symbol: struct_miqt_string): struct_miqt_string {.importc: "QLocale_toCurrencyString28".}
proc fcQLocale_toCurrencyString32(self: pointer, i: float32, symbol: struct_miqt_string, precision: cint): struct_miqt_string {.importc: "QLocale_toCurrencyString32".}
proc fcQLocale_formattedDataSize2(self: pointer, bytes: clonglong, precision: cint): struct_miqt_string {.importc: "QLocale_formattedDataSize2".}
proc fcQLocale_formattedDataSize3(self: pointer, bytes: clonglong, precision: cint, format: cint): struct_miqt_string {.importc: "QLocale_formattedDataSize3".}
proc fcQLocale_languageToCode2(language: cint, codeTypes: cint): struct_miqt_string {.importc: "QLocale_languageToCode2".}
proc fcQLocale_quoteString2(self: pointer, str: struct_miqt_string, style: cint): struct_miqt_string {.importc: "QLocale_quoteString2".}
proc fcQLocale_staticMetaObject(): pointer {.importc: "QLocale_staticMetaObject".}
proc fcQLocale_delete(self: pointer) {.importc: "QLocale_delete".}


func init*(T: type QLocale, h: ptr cQLocale): QLocale =
  T(h: h)
proc create*(T: type QLocale, ): QLocale =

  QLocale.init(fcQLocale_new())
proc create*(T: type QLocale, name: string): QLocale =

  QLocale.init(fcQLocale_new2(struct_miqt_string(data: name, len: csize_t(len(name)))))
proc create*(T: type QLocale, language: QLocaleLanguage, territory: QLocaleCountry): QLocale =

  QLocale.init(fcQLocale_new3(cint(language), cint(territory)))
proc create*(T: type QLocale, language: QLocaleLanguage): QLocale =

  QLocale.init(fcQLocale_new4(cint(language)))
proc create*(T: type QLocale, other: QLocale): QLocale =

  QLocale.init(fcQLocale_new5(other.h))
proc create2*(T: type QLocale, language: QLocaleLanguage, script: QLocaleScript): QLocale =

  QLocale.init(fcQLocale_new6(cint(language), cint(script)))
proc create*(T: type QLocale, language: QLocaleLanguage, script: QLocaleScript, territory: QLocaleCountry): QLocale =

  QLocale.init(fcQLocale_new7(cint(language), cint(script), cint(territory)))
proc operatorAssign*(self: QLocale, other: QLocale): void =

  fcQLocale_operatorAssign(self.h, other.h)

proc swap*(self: QLocale, other: QLocale): void =

  fcQLocale_swap(self.h, other.h)

proc language*(self: QLocale, ): QLocaleLanguage =

  QLocaleLanguage(fcQLocale_language(self.h))

proc script*(self: QLocale, ): QLocaleScript =

  QLocaleScript(fcQLocale_script(self.h))

proc territory*(self: QLocale, ): QLocaleCountry =

  QLocaleCountry(fcQLocale_territory(self.h))

proc country*(self: QLocale, ): QLocaleCountry =

  QLocaleCountry(fcQLocale_country(self.h))

proc name*(self: QLocale, ): string =

  let v_ms = fcQLocale_name(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc bcp47Name*(self: QLocale, ): string =

  let v_ms = fcQLocale_bcp47Name(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc nativeLanguageName*(self: QLocale, ): string =

  let v_ms = fcQLocale_nativeLanguageName(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc nativeTerritoryName*(self: QLocale, ): string =

  let v_ms = fcQLocale_nativeTerritoryName(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc nativeCountryName*(self: QLocale, ): string =

  let v_ms = fcQLocale_nativeCountryName(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toShort*(self: QLocale, s: string): cshort =

  fcQLocale_toShort(self.h, struct_miqt_string(data: s, len: csize_t(len(s))))

proc toUShort*(self: QLocale, s: string): cushort =

  fcQLocale_toUShort(self.h, struct_miqt_string(data: s, len: csize_t(len(s))))

proc toInt*(self: QLocale, s: string): cint =

  fcQLocale_toInt(self.h, struct_miqt_string(data: s, len: csize_t(len(s))))

proc toUInt*(self: QLocale, s: string): cuint =

  fcQLocale_toUInt(self.h, struct_miqt_string(data: s, len: csize_t(len(s))))

proc toLong*(self: QLocale, s: string): clong =

  fcQLocale_toLong(self.h, struct_miqt_string(data: s, len: csize_t(len(s))))

proc toULong*(self: QLocale, s: string): culong =

  fcQLocale_toULong(self.h, struct_miqt_string(data: s, len: csize_t(len(s))))

proc toLongLong*(self: QLocale, s: string): clonglong =

  fcQLocale_toLongLong(self.h, struct_miqt_string(data: s, len: csize_t(len(s))))

proc toULongLong*(self: QLocale, s: string): culonglong =

  fcQLocale_toULongLong(self.h, struct_miqt_string(data: s, len: csize_t(len(s))))

proc toFloat*(self: QLocale, s: string): float32 =

  fcQLocale_toFloat(self.h, struct_miqt_string(data: s, len: csize_t(len(s))))

proc toDouble*(self: QLocale, s: string): float64 =

  fcQLocale_toDouble(self.h, struct_miqt_string(data: s, len: csize_t(len(s))))

proc toString*(self: QLocale, i: clonglong): string =

  let v_ms = fcQLocale_toString(self.h, i)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toStringWithQulonglong*(self: QLocale, i: culonglong): string =

  let v_ms = fcQLocale_toStringWithQulonglong(self.h, i)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toStringWithLong*(self: QLocale, i: clong): string =

  let v_ms = fcQLocale_toStringWithLong(self.h, i)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toStringWithUlong*(self: QLocale, i: culong): string =

  let v_ms = fcQLocale_toStringWithUlong(self.h, i)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toStringWithShort*(self: QLocale, i: cshort): string =

  let v_ms = fcQLocale_toStringWithShort(self.h, i)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toStringWithUshort*(self: QLocale, i: cushort): string =

  let v_ms = fcQLocale_toStringWithUshort(self.h, i)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toStringWithInt*(self: QLocale, i: cint): string =

  let v_ms = fcQLocale_toStringWithInt(self.h, i)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toStringWithUint*(self: QLocale, i: cuint): string =

  let v_ms = fcQLocale_toStringWithUint(self.h, i)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toStringWithDouble*(self: QLocale, f: float64): string =

  let v_ms = fcQLocale_toStringWithDouble(self.h, f)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toStringWithFloat*(self: QLocale, f: float32): string =

  let v_ms = fcQLocale_toStringWithFloat(self.h, f)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toString2*(self: QLocale, date: gen_qdatetime.QDate, format: string): string =

  let v_ms = fcQLocale_toString2(self.h, date.h, struct_miqt_string(data: format, len: csize_t(len(format))))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret
